<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_DynSectorConfig" Id="{7188bcb9-ed22-0b1b-266f-7b303a03be9a}">
    <Declaration><![CDATA[TYPE ST_DynSectorConfig :
STRUCT
	stStatConfig						: REFERENCE TO ST_SectorConfig;
	CompareTrackObjectId		: ARRAY[GC.nNumMinTracks..GC.nNumMaxTracks] OF OTCID;
	ComparePartObjectId	    : ARRAY[GC.nNumMinTracks..GC.nNumMaxTracks] OF OTCID;
	SectorBndryFront				: LREAL := GC.SHUTTLE_LENGTH_PADDED;
	SectorBndryRear					: LREAL := GC.SHUTTLE_LENGTH_PADDED;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>